syntax = "proto3";

// {{{1 Request

// Generic container type for messages sent from client to server.
message SunneedRequest {
    oneof message_type {
        RegisterClientRequest register_client = 1;
        GetDeviceHandleRequest get_device_handle = 2;
    }
}

message RegisterClientRequest {}

message GetDeviceHandleRequest {
    string name = 1;
}

// {{{1 Response

// Generic container type for messages sent from server to client.
message SunneedResponse {
    int32 status = 1;
    oneof message_type {
        GenericResponse generic = 2;
        GetDeviceHandleResponse get_device_handle = 3;
    }
}

message GenericResponse {}

message GetDeviceHandleResponse {
    int32 device_handle = 1;
};

// }}}

// vim: fdm=marker :
